remove NotificationRepository and unused updateOrderStatus method from OrderServiceImpl